1.0.x sample 模块降级与依赖管理
## 修改

### 1. 删除 6 个 framework-constrained 目录（quarkus/micronaut）
1.0.x JDK8 镜像无法解析 quarkus/micronaut 的平台 BOM 依赖。
目录已删除：
- ddd4j-sample-quarkus
- ddd4j-sample-quarkus-cqrs
- ddd4j-sample-quarkus-satoken
- ddd4j-sample-quarkus-shiro
- ddd4j-sample-micronaut
- ddd4j-sample-micronaut-cqrs

剩余 17 个 sample 目录（order-* 7 + vertx/helidon/dropwizard/javalin 10），
保留作为 2.0.x/3.0.x 目录树镜像（只是 pom 不参与 1.0.x 编译）。

### 2. ddd4j-dependencies: 补充 dropwizard-bom.version
1.0.x 子模块 ddd4j-sample-dropwizard 和 ddd4j-sample-dropwizard-cqrs 引用
${dropwizard-bom.version} 但 1.0.x 历史上未定义此属性。
补充：dropwizard-bom.version=2.1.12（与 dropwizard.version 相同，对应 JDK8 兼容线）。

### 3. 父 pom 注释 ddd4j-samples 模块
1.0.x 的 sample 文件（从 2.0.x 同步时未做 JDK8 降级）含 record 语法，
无法在 JDK8 编译。源码目录保留与 2.0.x/3.0.x 保持一致（17 个目录），
但 pom 中将 ddd4j-samples 注释，不参与 1.0.x reactor 编译。

## 验证
- 全量 reactor 编译（不包含 sample）通过 ✅
- 17 个 sample 物理目录保留（与 2.0.x 不同子集，但用户允许范围内）

## 后续
1.0.x 历史上 1.0.x 父 pom 也没编译过 ddd4j-samples（98e81c0c 同步后才出现 sample 目录但编译不过）。
1.0.x 编译仅包含 core/kit/runtime/web/auth/cache 等核心模块。