@@ -14,7 +14,6 @@
  */
 package io.ddd4j.sample.helidon.cqrs;
 
-import java.util.Collections;
 import io.ddd4j.core.cqrs.command.CommandBus;
 import io.ddd4j.core.cqrs.command.DefaultCommandBus;
 import io.ddd4j.core.cqrs.eventstore.InMemoryEventStore;
@@ -87,7 +86,7 @@ public class HelidonCqrsBeans {
     @Produces
     @ApplicationScoped
     CommandBus commandBus(CreateOrderCommandHandler commandHandler) {
-        return new DefaultCommandBus(Collections.singletonList(commandHandler));
+        return new DefaultCommandBus(List.of(commandHandler));
     }
 
     @Produces
