@@ -1,6 +1,5 @@
 package io.ddd4j.sample.javalin.cqrs.order.domain.model;
 
-import java.util.Collections;
 import io.ddd4j.core.ddd.model.AggregateRoot;
 import io.ddd4j.kit.lang.StrKit;
 import io.ddd4j.sample.javalin.cqrs.order.domain.event.*;
@@ -78,8 +77,8 @@ public class Order extends AggregateRoot<String> {
      * @return 草稿订单
      */
     public static Order draft(String orderNo, String buyerId, String buyerName) {
-        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName, OrderStatus.DRAFT, Collections.emptyList());
-        order.registerEvent(new OrderCreatedEvent(order.getId()));
+        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName, OrderStatus.DRAFT, List.of());
+        order.registerEvent(new OrderCreatedEvent(order.id()));
         return order;
     }
 
@@ -110,7 +109,7 @@ public class Order extends AggregateRoot<String> {
      * @return 订单行列表
      */
     public List<OrderLine> lines() {
-        return Collections.unmodifiableList(new ArrayList<>(lines));
+        return List.copyOf(lines);
     }
 
     /**
