@@ -1,6 +1,5 @@
 package io.ddd4j.sample.javalin.satoken.order.domain.model;
 
-import java.util.Collections;
 import io.ddd4j.core.ddd.model.AggregateRoot;
 import io.ddd4j.kit.lang.StrKit;
 import io.ddd4j.sample.javalin.satoken.order.domain.event.*;
@@ -50,8 +49,8 @@ public class Order extends AggregateRoot<String> {
     }
 
     public static Order draft(String orderNo, String buyerId, String buyerName) {
-        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName, OrderStatus.DRAFT, Collections.emptyList());
-        order.registerEvent(new OrderCreatedEvent(order.getId()));
+        Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName, OrderStatus.DRAFT, List.of());
+        order.registerEvent(new OrderCreatedEvent(order.id()));
         return order;
     }
 
@@ -77,7 +76,7 @@ public class Order extends AggregateRoot<String> {
     }
 
     public List<OrderLine> lines() {
-        return Collections.unmodifiableList(new ArrayList<>(lines));
+        return List.copyOf(lines);
     }
 
     public Money totalAmount() {
