@@ -1,6 +1,5 @@
 package io.ddd4j.sample.javalin.satoken.rbac.infrastructure;
 
-import java.util.stream.Collectors;
 import io.ddd4j.kit.lang.CollKit;
 import io.ddd4j.kit.lang.StrKit;
 import io.ddd4j.sample.javalin.satoken.rbac.domain.model.User;
@@ -29,11 +28,11 @@ public class InMemoryUserRepository implements UserRepository {
 
     private static UserRow toRow(User user) {
         UserRow row = new UserRow();
-        row.userId = user.getId();
+        row.userId = user.id();
         row.username = user.getUsername();
         row.password = user.getPassword();
         row.realName = user.getRealName();
-        row.status = user.getStatus().getName();
+        row.status = user.getStatus().name();
         row.roleIds = new ArrayList<>(user.getRoleIds());
         return row;
     }
@@ -68,16 +67,16 @@ public class InMemoryUserRepository implements UserRepository {
     @Override
     public List<User> findByStatus(User.Status status) {
         return rows.values().stream()
-                .filter(r -> Objects.equals(status.getName(), r.status))
+                .filter(r -> Objects.equals(status.name(), r.status))
                 .map(InMemoryUserRepository::toModel)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<User> findAll() {
         return rows.values().stream()
                 .map(InMemoryUserRepository::toModel)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     // ============================ 模型与行转换 ============================
@@ -85,7 +84,7 @@ public class InMemoryUserRepository implements UserRepository {
     @Override
     public User save(User aggregate) {
         Objects.requireNonNull(aggregate, "aggregate must not be null");
-        rows.put(aggregate.getId(), toRow(aggregate));
+        rows.put(aggregate.id(), toRow(aggregate));
         return aggregate;
     }
 
