@@ -1,6 +1,5 @@
 package io.ddd4j.sample.javalin.shiro.order.infrastructure;
 
-import java.util.stream.Collectors;
 import io.ddd4j.kit.lang.StrKit;
 import io.ddd4j.sample.javalin.shiro.order.domain.model.Money;
 import io.ddd4j.sample.javalin.shiro.order.domain.model.Order;
@@ -32,20 +31,20 @@ public class InMemoryOrderRepository implements OrderRepository {
 
     private static OrderRow toRow(Order order) {
         OrderRow row = new OrderRow();
-        row.id = order.getId();
-        row.orderNo = order.getOrderNo();
-        row.buyerId = order.getBuyerId();
-        row.buyerName = order.getBuyerName();
-        row.status = order.getStatus().getName();
+        row.id = order.id();
+        row.orderNo = order.orderNo();
+        row.buyerId = order.buyerId();
+        row.buyerName = order.buyerName();
+        row.status = order.status().name();
         row.lines = new ArrayList<>();
         for (OrderLine line : order.lines()) {
             OrderLineRow lr = new OrderLineRow();
-            lr.id = line.getId();
+            lr.id = line.id();
             lr.goodsId = line.goodsId();
             lr.goodsName = line.goodsName();
             lr.quantity = line.quantity();
-            lr.unitPrice = line.unitPrice().getAmount();
-            lr.currency = line.unitPrice().getCurrency();
+            lr.unitPrice = line.unitPrice().amount();
+            lr.currency = line.unitPrice().currency();
             row.lines.add(lr);
         }
         return row;
@@ -55,7 +54,7 @@ public class InMemoryOrderRepository implements OrderRepository {
         List<OrderLine> lines = Optional.ofNullable(row.lines).orElseGet(List::of).stream()
                 .map(lr -> new OrderLine(lr.id, lr.goodsId, lr.goodsName, lr.quantity,
                         new Money(lr.unitPrice, lr.currency)))
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
         return new Order(row.id, row.orderNo, row.buyerId, row.buyerName,
                 OrderStatus.valueOf(row.status), lines);
     }
@@ -83,7 +82,7 @@ public class InMemoryOrderRepository implements OrderRepository {
     public List<Order> findAll() {
         return rows.values().stream()
                 .map(InMemoryOrderRepository::toModel)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     // ============================ 模型与行转换 ============================
@@ -91,7 +90,7 @@ public class InMemoryOrderRepository implements OrderRepository {
     @Override
     public Order save(Order aggregate) {
         Objects.requireNonNull(aggregate, "aggregate must not be null");
-        rows.put(aggregate.getId(), toRow(aggregate));
+        rows.put(aggregate.id(), toRow(aggregate));
         return aggregate;
     }
 
