@@ -1,6 +1,5 @@
 package io.ddd4j.sample.order.domain;
 
-import java.util.Collections;
 import io.ddd4j.core.ddd.model.AggregateRoot;
 import io.ddd4j.kit.lang.StrKit;
 import io.ddd4j.sample.order.domain.event.OrderCancelledEvent;
@@ -42,7 +41,7 @@ public final class Order extends AggregateRoot<String> {
 
     public static Order draft(String orderNo, String buyerId, String buyerName) {
         Order order = new Order(UUID.randomUUID().toString(), orderNo, buyerId, buyerName,
-                OrderStatus.DRAFT, Collections.emptyList());
+                OrderStatus.DRAFT, List.of());
         order.registerEvent(new OrderCreatedEvent(order.id));
         return order;
     }
@@ -69,7 +68,7 @@ public final class Order extends AggregateRoot<String> {
     }
 
     public List<OrderLine> lines() {
-        return Collections.unmodifiableList(new ArrayList<>(lines));
+        return List.copyOf(lines);
     }
 
     public Money totalAmount() {
