@@ -1,6 +1,5 @@
 package io.ddd4j.sample.order.local;
 
-import java.util.stream.Collectors;
 import io.ddd4j.sample.order.application.IdempotencyPort;
 import io.ddd4j.sample.order.application.OrderReadModel;
 import io.ddd4j.sample.order.application.OrderReadModelPort;
@@ -59,7 +58,7 @@ public final class InMemoryOrderAdapters implements OrderRepository, OutboxPort,
 
     @Override
     public List<Order> findAll(int offset, int limit) {
-        return orders.values().stream().skip(offset).limit(limit).collect(java.util.stream.Collectors.toList());
+        return orders.values().stream().skip(offset).limit(limit).toList();
     }
 
     @Override
@@ -74,7 +73,7 @@ public final class InMemoryOrderAdapters implements OrderRepository, OutboxPort,
 
     @Override
     public List<OutboxMessage> pending(int limit) {
-        return new ArrayList<>(pending.values()).stream().limit(limit).collect(java.util.stream.Collectors.toList());
+        return new ArrayList<>(pending.values()).stream().limit(limit).toList();
     }
 
     @Override
@@ -105,7 +104,7 @@ public final class InMemoryOrderAdapters implements OrderRepository, OutboxPort,
                 .filter(order -> Objects.isNull(criteria.status()) || criteria.status() == order.status())
                 .skip((long) (criteria.page() - 1) * criteria.size())
                 .limit(criteria.size())
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
